<resources>
    <string name="app_name">Rajasthan News Live TV</string>
    <string name="todo">TODO</string>RajasthanRajasthan
    <string name="bengali_channel">Rajasthan News Channel</string>
    <string name="App_ID">ca-app-pub-3494707665933635~5817111535</string>
    <string name="InterstitialAd">ca-app-pub-3494707665933635/1014504701</string>
    <string name="Banner_Ads_1">ca-app-pub-3494707665933635/4175074418</string>
    <string name="Banner_Ads_2">ca-app-pub-3494707665933635/2861992741</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="home">Home</string>
    <string name="containing_information">Containing Information</string>
    <string name="share">Share</string>
    <string name="rate_update">RateUS/ Update</string>
    <string name="about_app">About App</string>
    <string name="website">Website</string>
    <string name="facebook">Facebook</string>
    <string name="youtube">YouTube</string>
    <string name="channel_description">Channel Description</string>
    <string name="email">Email</string>
    <string name="live_now">Live Now</string>
    <string name="livetv_link">LiveTV Link</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="appDes">Live More with Rajasthan News Channel and E-Paper</string>
    <string name="channel_des">This app makes use of the YouTube Web view and Exoplayer to live stream the news channels inside the app. Neither we have control over the published content nor we are responsible for the content published on these channels. Below we have listed the official website of the news channels being streamed inside our app. Please get in touch with the original publisher in case of any clarification required on the contents of the channel.</string>
    <string name="news_paper_Des">We make it easy to read the most popular Rajasthan daily newspapers inside our app. We load the daily newspapers from their official website inside our app browser to make it easy to read newspapers without leaving the app. We don\'t have any control over the contents being published on the listed newspapers. For any queries regarding the published content, please get in touch with the original publisher. We have listed the websites of ePaper publishers below</string>
    <string name="my_website">https://www.codehemu.com/</string>
    <string name="my_email">hemantagayen999@gmail.com</string>
    <string name="not_Open_ePaper">कुछ समस्या के कारण पेज नहीं खुल रहा है. आप इसे अपने ब्राउज़र में खोल सकते हैं.</string>
    <string name="policy_url">https://sites.google.com/view/rajasthannewsliveapp/home</string>
    <string name="google_top_news"><![CDATA[https://news.google.com/home?hl=bn&gl=BD]]></string>
    <string name="Bengali_banner_json">https://script.google.com/macros/s/AKfycbzGR4C2gaf5NpQKT_wSXIZuWx-qqfEnCSxfo-sSsfEziYRlcAPBS_Oo3iymOl6GAf3C/exec</string>
    <string name="Bengali_news_json">https://script.google.com/macros/s/AKfycbw44C7-unXVqJZzUxFkTEKvhadbbqIAGUhZqZAeR9i8sGnpfA_I91TUMzzkP8K09CDs/exec</string>
    <string name="Hindi_news_json">https://script.google.com/macros/s/AKfycbyvHOPsrSOXu9IwnldNbC_AGf46Vi653R-zZtvb3-C-Ej57-k6sKcytEtw_l4Oe7p4/exec</string>
    <string name="English_news_json">https://script.google.com/macros/s/AKfycbwODevG8_PP9N7khIUJLNjMhzMU2QkrNQMLnQ89-zrCH-Anc5CZifrbRPJUSW4oMlk/exec</string>
    <string name="Bengali_paper_json">https://script.google.com/macros/s/AKfycby4Wo_ki-QE1Kzg2ryfEvr5pIWAZ80PhZig85594atPwnaspFe_m1-fAXAQm1hdEtDoFw/exec</string>
    <string name="hindi_news_channel">Hindi News Channel</string>
    <string name="english_news_channel">English News Channel</string>
    <string name="e_paper">E-Paper</string>
    <string name="sorry_desc">क्षमा करें, हमें कोई जानकारी नहीं मिल सकी</string>
    <string name="tab_here_read_more">Tab here read more</string>
    <string name="ap_bn">ਹੋਰ ਪੜ੍ਹੋ..</string>
    <string name="rate_us">Rate US</string>
    <string name="shorts">Shorts</string>
    <string name="c_description">Channel Description</string>
    <string name="channel_info">Channel Info</string>
    <string name="website_link">Website Link</string>
    <string name="sa">Website Link</string>
    <string name="as">Channel Description</string>
    <string name="share_it">इसे शेयर करें</string>
    <string name="download_it">" - ऐप डाउनलोड करने के लिए नीचे दिए गए लिंक पर जाएं\n\n"</string>
    <string name="bengali_live_news_channels">Rajasthan Live News Channels</string>
    <string name="free_bengali_news_paper">Free Rajasthan News Paper</string>
    <string name="more_app">More App</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="dis_data">this News apps does not stream any of the channels included in its website/ app, All the streaming links are from third parties available free on the internet.If any one founds that we are violating by broadcasting any copyright protected channel email us the channel name,based on your email request.</string>
    <string name="dis_data2">AS of now This all News Channels are streamed by Hindi News. We are not responsible for its Contents.</string>
</resources>